# pacs-dog-map

./: .env.example  .gitignore  GOOGLE_FORM_PHOTO_SETUP.md  Makefile  PACS_Test_1.xlsx  PACS_Test_1_updated.xlsx  README.md  REAL_TIME_SETUP.md  SETUP_GUIDE.md  TESTING.md  generate_map.py  index.html  pacs-map  prompts.txt  pyproject.toml  requirements.txt  skip-build.yml  system_test.py  test_system.py  whatsapp_integration.md
.github/workflows/: update-map.yml
data/: PACS_Test_1_List_v2.csv  PACS_Test_1_List_v2_fixed.csv  data_from_sheets.csv  data_from_sheets_fixed.csv  processed_data.csv  sample_data.csv  updated_data.csv
scripts/: batch_operations.py  extract_all_coordinates.py  fix_coordinates.py  generate_enhanced_map.py  google_sheets_sync.py  sheets_webhook.gs
src/pacs_map/: __init__.py  cli.py  config.py  coordinates.py  core.py  data.py  operations.py
tests/: __init__.py  test_cli.py  test_coordinates.py  test_data.py  test_integration.py
web/: dog-photo-widget.html  index.html
